--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,17 +17,7 @@ jobs:
           fetch-depth: 0
           submodules: true
           persist-credentials: false
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-        
-      - name: Setup Git Authentication for File Write
-        # 【💡 追加】ローカルファイル書き込み用の認証をセットアップ
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          echo "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com" | git credential approve
-
-      
+          
       - name: Setup Git for LF/CRLF and encoding
         # 改行コードやファイル名エンコーディングの問題を解決
         run: |
@@ -36,18 +26,26 @@ jobs:
           git config --global core.editor "vim"
           git config --global core.ignorecase false
 
+      # 【💡 認証修正】ローカルファイル書き込み用の認証をセットアップ
+      - name: Setup Git Authentication for File Write
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          # GITHUB_TOKENを使ってリモートURLに認証情報を付与し、書き込みを可能にする
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20' # 安定版のNode.jsバージョン
 
       - name: Install Qiita CLI
-        # 【修正なし】ローカルインストール
+        # ローカルインストール
         run: npm install qiita 
 
       - name: Publish to Qiita
         env:
           # GitHub Secretsに登録したアクセストークン名
           QIITA_TOKEN: ${{ secrets.QIITA_TOKEN }} 
-        # 【💡 最終修正】ローカルパスにある実行ファイルを node で直接呼び出す
+        # ローカルパスにある実行ファイルを node で直接呼び出す
         run: node ./node_modules/qiita/lib/qiita.js publish --all
