--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,41 +11,51 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-        # エンコーディングの問題回避のため、Git設定を追加
+        # ID書き戻しを可能にするため、トークンを渡す
         with:
           lfs: true 
           fetch-depth: 0
           submodules: true
-          persist-credentials: false
+          # 書き込み権限を付与する
+          token: ${{ secrets.GITHUB_TOKEN }} 
           
       - name: Setup Git for LF/CRLF and encoding
-        # 改行コードやファイル名エンコーディングの問題を解決
         run: |
           git config --global core.autocrlf false
           git config --global core.quotepath false
           git config --global core.editor "vim"
           git config --global core.ignorecase false
 
-      # 【💡 認証修正】ローカルファイル書き込み用の認証をセットアップ
+      # 【💡 修正】Git認証をシンプルな形に戻す
       - name: Setup Git Authentication for File Write
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          # GITHUB_TOKENを使ってリモートURLに認証情報を付与し、書き込みを可能にする
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20' # 安定版のNode.jsバージョン
+          node-version: '20'
 
       - name: Install Qiita CLI
-        # ローカルインストール
         run: npm install qiita 
 
       - name: Publish to Qiita
         env:
-          # GitHub Secretsに登録したアクセストークン名
           QIITA_TOKEN: ${{ secrets.QIITA_TOKEN }} 
-        # ローカルパスにある実行ファイルを node で直接呼び出す
-        run: node ./node_modules/qiita/lib/qiita.js publish --all
+        # 投稿を実行
+        run: node ./node_modules/qiita/lib/qiita.js publish --all 
+        
+      # 【💡 追加】IDの書き戻しが行われた場合、その変更をGitHubにプッシュする
+      - name: Push back changes (if ID was written)
+        run: |
+          # 変更があるか確認
+          if [[ -n "$(git status --porcelain)" ]]; then
+            echo "Changes detected (ID written back). Pushing to repository."
+            git add .
+            git commit -m "chore: [skip ci] Auto-update article ID after Qiita publish"
+            # 認証済みのトークンを使ってプッシュ
+            git push
+          else
+            echo "No changes to push."
+          fi
